Fix clear button on mobile

--- a/assets/css/public/_details-page.scss
+++ b/assets/css/public/_details-page.scss
@@ -368,6 +368,20 @@
     position: relative; // Add this line to set position context for the clear button
   }
 
+  .filter-module__item.keyword-item .keyword-input-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  @media (min-width: 576px) {
+    .filter-module__item.keyword-item .keyword-input-wrapper {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
   .filter-label {
     font-size: 14px;
     font-weight: bold;
@@ -591,6 +605,10 @@
       display: none;
     }
 
+    .filter-buttons {
+      width: 100%;
+    }
+
     .follow-tooltip {
 
       &__inner {
@@ -599,26 +617,35 @@
       }
     }
 
-    .filter-module {
-      flex-direction: column;
-      
-      &__item {
-        width: 100%;
-        margin-bottom: 10px;
+     .filter-module {
+      .keyword-item {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
       }
-    }
 
-    .filter-buttons {
-      width: 100%;
-    }
+      .filter-label {
+        grid-row: 1;
+      }
 
-    .filter-button {
-      width: 100%;
+      .keyword-input-wrapper {
+        grid-row: 2;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+      }
+
+      input.filter-input { }
+
+      .filter-button {
+        width: auto;
+        height: auto;
+        margin-top: 15px; // nudge the clear button down
+      }
     }
   }
 
   // DESKTOP
-
   @media screen
   and (min-device-width: 768px) {
 
